# gr-cospas

./: .gitignore  ARCHITECTURE_FINALE.md  CMakeLists.txt  ETAT_DES_LIEUX_SESSION.md  MANIFEST.yml  README.md  RESUME_RAPIDE.md  analyze_freq_drift_sdr.py  logs_FFFE2F8E39048D158AC01E3AA482856824CE.txt  logs_test_ref_40khz.txt  mistral.txt  scan406_iq.py  test_burst_detector.py  test_demodulator.py  test_file_with_message_mode.py  test_message_ports.py  test_rtlsdr.py  visualize_iq.py
.conda/: README.md
Docs/: ARCHITECTURE_CIBLE.md  ETAT_GENERATEUR_2G.md  README.cospas
apps/: CMakeLists.txt
data/: config_mail.txt  scan_rtlpower.csv  trame.asc  trame_19_11_2025___14h03m32s.txt  trame_19_11_2025___14h04m36s.txt  trame_19_11_2025___14h05m41s.txt  trame_19_11_2025___14h06m50s.txt  trame_19_11_2025___14h07m54s.txt  trame_19_11_2025___14h08m58s.txt  trame_19_11_2025___14h10m01s.txt  trame_19_11_2025___14h11m05s.txt  trame_19_11_2025___14h12m09s.txt
docs/: ROADMAP_PROJET.md  autocorrelation_analysis.html  firmin.txt  trame_FGB_pluto.txt
examples/: CMakeLists.txt  README_DEMO.md  analyze_wav_nogui.py  decode_iq_40khz.py  decode_iq_file.grc  decode_iq_matlab_direct.py  decode_iq_matlab_gui.grc  decode_matlab_iq.py  decode_matlab_iq_gui.py  (+10 more)
python/cospas/bindings/: CMakeLists.txt  burst_router_python.cc  cospas_burst_detector_python.cc  cospas_sarsat_decoder_python.cc  cospas_sarsat_demodulator_python.cc  failed_conversions.txt  python_bindings.cc
python/cospas/bindings/docstrings/: cospas_sarsat_decoder_pydoc_template.h  cospas_sarsat_demodulator_pydoc_template.h
(+127 files in other folders)
